--- a/public/materials.html
+++ b/public/materials.html
@@ -269,7 +269,7 @@
     </div>
 
     <script>
-        const API = 'http://localhost:3000/api';
+        const API = '/api';
         
         // --- DATA CONFIG ---
         const subjects = {
