Fix auth logic, upload permissions, and api paths

--- a/public/materials.html
+++ b/public/materials.html
@@ -277,7 +277,7 @@
             'Nosql': { name: 'NoSQL Databases', color: 'var(--no)' },
             'Probability_Maths': { name: 'Probability & Maths', color: 'var(--pm)' },
             'Java_Programming': { name: 'Java Programming', color: 'var(--jp)' },
-            'Coding_Lab': { name: 'Coding Lab', color: 'var(--cl)' }
+            'Advanced_mern': { name: 'Advanced mern', color: 'var(--cl)' }
         };
 
         let fileData = {};
