--- a/public/main.html
+++ b/public/main.html
@@ -535,7 +535,7 @@ window.addEventListener('load', checkLogin);
 <!-- NOTICE BAR -->
 <div class="notice-bar">
   <div class="notice-text" id="noticeText">
-    More features are coming soon please stay tuned 😊...
+    stay tuned for more updates😊...
   </div>
 </div>
 <script src="toast.js"></script>
